fix: text overflow for worklog and quick history for words with many characters

--- a/src/app/features/quick-history/quick-history.component.scss
+++ b/src/app/features/quick-history/quick-history.component.scss
@@ -145,6 +145,8 @@ $this-border-radius: 8px;
       padding-left: $s * 2;
       padding-right: 0;
       width: 100%;
+      // prevent overflow for looooong words
+      word-break: break-word;
     }
 
     &.worked {
